--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,8 @@
 <div class='nav'>
     <ul class='wrap'>
         <li><a href='/'>Home</a></li>
+        <li><a href='/about'>About me</a></li>
+        <li><a href='/publications'>Publications</a></li>
+        <li><a href='/notes'>Expository Notes</a></li>
     </ul>
 </div>
