--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,6 +3,7 @@
         <li><a href='/'>Home</a></li>
         <li><a href='/about'>About me</a></li>
         <li><a href='/publications'>Publications</a></li>
+        <li><a href='/research'>Research</a></li>
         <li><a href='/blog'>Blogs</a></li>
         <li><a href='/notes'>Expository Notes</a></li>
     </ul>
