--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,7 @@
         <div class='wrap'>
             <h1>{{ page.title }}</h1>
             <h4>{{ page.subtitle }}</h4>
+            <p><i>{{ page.authors }}</i></p>
             <div class='bylines'>
                 <div class='byline'>
                     <h3>Published</h3>
